--- a/roster/roster.css
+++ b/roster/roster.css
@@ -1,53 +1,42 @@
-/* Related Merch Section */
-.related-merch-section {
-  background-color: #0B1215;
-  overflow: hidden;
-  padding: 0 100px 200px;
-}
-
-.related-merch-content {
-  position: relative;
-  max-width: 95%;
-  margin: 0 auto;
-}
-
-.rainbow-container-top img,
-.rainbow-container-bottom img {
-  width: 100%;
-  height: auto;
-  display: block;
-  margin: 0;
-}
-
-/* Store Section Styles from home.css */
+/* Store Section */
 .store-section {
-  width: 100%;
-  background-color: #0B1215;
+  width: 100vw;
+  background-color: #F3F4F6;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 3vw;
+  overflow: hidden;
   position: relative;
-  gap: 10px;
-  margin-bottom: 60px;
+  padding: 60px 6vw;
+}
+
+.store-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .store-heading {
   font-family: "ringold-sans", sans-serif;
-  font-size: 48px;
+  font-size: 128px;
   font-weight: 400;
-  color: #F3F4F6;
-  margin: 0;
-  align-self: flex-start;
+  color: #0B1215;
+  text-align: center;
   transition: font-size 0.3s ease;
+  padding: 0;
+  margin-bottom: 40px;
+  text-align: left;
+  width: 100%;
 }
 
 .store-grid {
   display: grid;
-  gap: 1.5vw;
+  gap: 2.5vw;
   width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));
   justify-content: center;
 }
 
@@ -60,19 +49,14 @@
 }
 
 .merch-block {
-  background-color: #F3F4F6; 
   width: 100%;
   aspect-ratio: 1;
   display: flex;
   flex-direction: column;
   position: relative;
-  font-size: 133%;
-  transition: transform 0.3s ease;
   border: 4px solid #0B1215;
   transition: transform 0.3s ease;
   text-transform: uppercase;
-  max-width: 500px;
-  margin: auto;
 }
 
 .merch-block:hover {
@@ -173,26 +157,20 @@
   color: #0B1215;
 }
 
-
 /* Laptop Media Query */
-@media (max-width: 1280px) {
-
-  .related-merch-section {
-    padding: 0 20px 150px;
-  }
-
+@media (max-width: 1280px) {  
   .store-section {
-    padding: 0 5vw;
-    margin-bottom: 40px;
+    padding: 60px 6vw;
   }
 
   .store-heading {
-    font-size: 34px;
+    font-size: 100px;
+    margin-bottom: 40px;
   }
 
   .store-grid {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2.5vw;
+    gap: 3vw;
   }
 
   .merch-block {
@@ -219,27 +197,24 @@
 
   .merch-block-price {
     font-size: 30px;
-  }  
+  }
 }
 
 /* Mobile Media Query */
 @media (max-width: 768px) {
-  .related-merch-section {
-    padding: 0 4px 100px;
-  }
-
   .store-section {
-    padding: 0 8vw;
-    margin-bottom: 50px;
+    padding: 60px clamp(1px, 13vw, 45px);
   }
 
   .store-heading {
-    font-size: 40px;
-    align-self: left;
+    font-size: 60px;
+    margin-bottom: clamp(1px, 9vw, 40px);
+    text-align: center;
   }
 
   .store-grid {
     grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
+    gap: 9vw;
     gap: clamp(1px, 9vw, 30px);
   }
 
