--- a/about/about.css
+++ b/about/about.css
@@ -38,21 +38,24 @@
 }
 
 .about-text {
-  font-family: "articulat-cf", sans-serif;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 1.8;
-  text-align: left;
-  max-width: 1100px;
-  color: #F3F4F6;
-  margin: 0;
-  padding: 0;
-}
+    background-color: #0B1215;
+    color: #f3f4f6;
+    font-family: "articulat-cf", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 28px;
+    padding: 50px;
+    margin: 0;
+    text-align: left;
+    height: auto;
+    line-height: 1.5;
+    transition: font-size 0.3s ease;
+  }
 
-.about-text p {
-  margin: 0;
-  padding: 0;
-}
+  .about-text p {
+    max-width: 1600px;
+    margin: auto;
+  }
 
 .mcr-signature {
   text-align: left;
