--- a/roster/cryhard/cryhard.css
+++ b/roster/cryhard/cryhard.css
@@ -1,13 +1,20 @@
 /* Cryhard Page */
-.artist-page {
-padding: 20px;
-max-width: 1200px;
-margin: 0 auto;
+.artist-section {
+  background-color: #0b1215;
+  width: 100vw;
+  overflow: hidden;
+  margin-bottom: 100px;
+  padding: 60px 6vw;
 }
 
-.artist-header {
-text-align: center;
-margin: 20px 0;
+.artist-heading {
+  font-family: "ringold-sans", sans-serif;
+  font-size: 128px;
+  font-weight: 400;
+  color: #F3F4F6;
+  margin: 0;
+  padding: 0;
+  text-align: left;
 }
 
 .artist-name {
@@ -35,24 +42,12 @@ height: auto;
 border-radius: 10px;
 }
 
-.artist-buttons {
+.artist-interactables {
 display: flex;
 justify-content: space-between;
 align-items: center;
 margin: 20px 0;
 flex-wrap: wrap;
-}
-
-.listen-now-button {
-background-color: #F3F4F6;
-color: #0B1215;
-padding: 15px 25px;
-font-family: "coolvetica", sans-serif;
-font-size: 69px;
-font-weight: 700;
-border: none;
-cursor: pointer;
-border-radius: 5px;
 }
 
 .artist-social-icons {
@@ -70,14 +65,26 @@ transition: transform 0.2s ease;
 transform: scale(1.2);
 }
 
-.artist-description {
-margin: 20px 0;
-line-height: 1.6;
-font-size: 48PX;
-font-family: "articulat-cf", sans-serif;
-font-weight: 500;
-font-style: normal;
-}
+  /* Description Section */
+  .description-section {
+    background-color: #0B1215;
+    color: #f3f4f6;
+    font-family: "articulat-cf", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 28px;
+    padding: 50px;
+    margin: 0;
+    text-align: left;
+    height: auto;
+    line-height: 1.5;
+    transition: font-size 0.3s ease;
+  }
+
+  .description-section p {
+    max-width: 1600px;
+    margin: auto;
+  }
 
  /* Related Merch Section - Updated with Store Section Styles */
   .related-merch-section {
