--- a/roster/cryhard/cryhard.css
+++ b/roster/cryhard/cryhard.css
@@ -26,7 +26,7 @@
   font-family: "ringold-sans", sans-serif;
   font-size: 128px;
   font-weight: 400;
-  line-height: 0.66;
+  line-height: 0.8;
 }
 
 .artist-location {
@@ -56,14 +56,15 @@
 }
 
 .bandcamp-player {
-  width: 70%;
+  width: 100%;
+  max-width: 700px;
   background-color: #FFFFFF;
   height: 42px;
 }
 
 .player-spacer{
   background-color: #FFFFFF;
-  width: 30%;
+  width: 50%;
   height: 42px;
   border-top: #d2d2d2 1px solid;
   border-bottom: #d2d2d2 1px solid;
