--- a/home.css
+++ b/home.css
@@ -43,7 +43,7 @@
 }
 
 /* Latest Release Section */
-.latest-release {
+.featured-release {
   width: 100vw;
   height: 750px;
   background-color: #0B1215;
@@ -308,7 +308,7 @@
     margin-top: 15px;
   }
 
-  .latest-release {
+  .featured-release {
     height: 700px;
   }
 
@@ -410,7 +410,7 @@
     margin-top: 5px;
   }
 
-  .latest-release {
+  .featured-release {
     height: 500px;
     flex-direction: column;
     position: relative;
