public-facing pages done

--- a/assets/shared-styles/product-page.css
+++ b/assets/shared-styles/product-page.css
@@ -191,7 +191,7 @@
     font-size: 28px;
     padding: 50px;
     margin: 0;
-    text-align: left;
+    text-align: center;
     height: auto;
     line-height: 1.5;
     transition: font-size 0.3s ease;
