--- a/assets/shared-styles/epk.css
+++ b/assets/shared-styles/epk.css
@@ -1,4 +1,3 @@
-/* Cryhard Page */
 .artist-section {
   background-color: #0b1215;
   width: 100vw;
@@ -109,6 +108,12 @@
 .bandcamp-player {
 }
 
+.bandcamp-player iframe {
+  border: 0;
+  width: 400px;
+  height: 472px;
+}
+
 .artist-contact {
   font-family: "articulat-cf", sans-serif;
   font-weight: 500;
@@ -155,6 +160,7 @@
   transition: font-size 0.3s ease;
 }
 
+/* Video Section */
 .video-section {
   padding: 0 20vw;
   display: flex;
@@ -176,7 +182,6 @@
 .video-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   gap: 40px;
   width: 100%;
   justify-content: center;
@@ -360,7 +365,7 @@
 @media (max-width: 1280px) {
 
   .artist-section {
-    padding: 60px 20vw;
+    padding: 20px 20vw;
   }
 
   .artist-heading {
@@ -382,6 +387,12 @@
   .artist-content {
     flex-direction: column;
     margin: 0;
+  }
+
+  .artist-image-carousel{
+    position: relative;
+    overflow: hidden;
+    max-height: 40vh;
   }
 
   .carousel-button {
@@ -410,6 +421,11 @@
     justify-content: center;
   }
 
+  .artist-socials a img {
+    width: 30px;
+    height: 30px;
+  }
+
   .description-section {
       font-size: 24px;
       margin: 40px 0 0;
@@ -427,36 +443,67 @@
 @media (max-width: 768px) {
 
   .artist-section {
-    padding: 60px 8vw;
+    padding: 20px 8vw;
+    gap: 0;
   }
 
   .artist-heading {
     align-self: center;
     margin: 0;
     text-align: center;
-    line-height: 3;
+    line-height: 1;
+    margin: 0 0 40px;
   }
 
   .artist-name {
-    font-size: 52px;
+    font-size: 42px;
     align-self: center;
-    margin: 0;
+    line-height: 1.5;
   }
 
   .artist-location{
-    font-size: 16px;
+    font-size: 14px;
     align-self: center;
-    margin: 0;
+    line-height: 1;
   }
 
   .artist-content {
     flex-direction: column;
     margin: 0;
+    gap: 40px;
+  }
+  .artist-image-carousel{
+    position: relative;
+    overflow: hidden;
+    max-height: 40vh; /* or a custom limit */
+  }
+
+  .carousel-track {
+    display: flex;
+    transition: transform 0.4s ease-in-out;
+    height: 100%;
+  }
+
+  .carousel-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 100%;
+    height: 100%;
+  }
+
+  .artist-image {
+    height: auto;
+    width: auto;
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+    display: block;
   }
 
   .carousel-button {
-  font-size: 14px;
-  padding: 7px;
+    font-size: 10px;
+    padding: 7px;
   }
 
   .artist-interactables {
@@ -464,16 +511,25 @@
     flex-direction: column;
     text-align: center;
     margin: 0;
+    gap: 20px;
   }
 
   .bandcamp-player {
     order: 3;
-    margin: 0;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+  }
+
+  .bandcamp-player iframe {
+    border: 0;
+    width: 80vw;
+    height: 300px;
   }
 
   .artist-contact {
     order: 1;
-    font-size: 18px;
+    font-size: 14px;
     margin: 0;
     text-decoration: none;
     color: white;
@@ -485,10 +541,16 @@
     justify-content: center;
   }
 
+  .artist-socials a img {
+    width: 30px;
+    height: 30px;
+  }
+
   .description-section {
     font-size: 17px;
     margin: 40px 0 0;
     align-self: center;
+    text-align: center;
   }
 
   .video-section {
@@ -498,8 +560,12 @@
 
   .video-heading {
     font-size: 52px;
-    text-align: flex-start;
-    align-self: flex-start;
-    margin: 0 0 60px;
+    text-align: center;
+    align-self: center;
+    margin: 0 0 20px;
   }
+
+  .video-container {
+  flex-wrap: wrap;
+}
 }
