--- a/home.css
+++ b/home.css
@@ -45,7 +45,7 @@
 /* Featured Release Section */
 .featured-release {
   width: 100vw;
-  height: auto;
+  height: 800px;
   background-color: #0B1215;
   display: flex;
   flex-direction: row;
@@ -54,7 +54,6 @@
   align-items: center;
   transition: height 0.3s ease;
   position: relative;
-  padding-bottom: 20px;
 }
 
 .featured-release-hero {
@@ -390,7 +389,7 @@
   }
 
   .featured-release {
-    /* height: 700px; */
+    height: 800px;
   }
 
   .featured-release-hero {
@@ -492,7 +491,7 @@
   }
 
   .featured-release {
-    /* height: 500px; */
+    height: 550px;
     flex-direction: column;
     position: relative;
   }
