--- a/roster/roster.css
+++ b/roster/roster.css
@@ -1,4 +1,3 @@
-/* Store Section */
 .roster-section {
   width: 100vw;
   background-color: #0B1215;
@@ -57,6 +56,7 @@
   border: 4px solid #0B1215;
   transition: transform 0.3s ease;
   text-transform: uppercase;
+  overflow: hidden;
 }
 
 .artist-block:hover {
@@ -99,7 +99,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   padding: 8px;
-  border: 4px solid #0B1215;
+  border-top: 4px solid #0B1215;
   position: relative;
   overflow: hidden;
 }
