--- a/assets/shared-styles/product-page/desktop.css
+++ b/assets/shared-styles/product-page/desktop.css
@@ -250,6 +250,7 @@
     width: 100%;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     justify-content: center;
+    padding: 0 4vw;
 }
 
 .merch-link {
