--- a/store/store.css
+++ b/store/store.css
@@ -38,6 +38,7 @@
   width: 100%;
   grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));
   justify-content: center;
+  padding: 0 4vw;
 }
 
 .merch-link {
@@ -216,6 +217,7 @@
     grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
     gap: 9vw;
     gap: clamp(1px, 9vw, 30px);
+    padding: 0 6vw;
   }
 
   .merch-block:hover .default-image {
