--- a/roster/roster.base.css
+++ b/roster/roster.base.css
@@ -111,113 +111,7 @@
   font-size: 26px;
   color: #0B1215;
   max-width: 100%;
-  overflow: hidden;
+  overflow: visible;
   white-space: nowrap;
   text-overflow: ellipsis;
-}
-
-/* Laptop Media Query */
-@media (max-width: 1280px) {  
-  .roster-section {
-    padding: 60px 6vw;
-  }
-
-  .roster-heading {
-    font-size: 100px;
-    margin-bottom: 40px;
-  }
-
-  .roster-grid {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 3vw;
-  }
-
-  .artist-block {
-    border: 3px solid #0B1215;
-  }
-
-  .artist-block-details-container {
-    border-top: 3px solid #0B1215;
-  }
-
-  .artist-block-names-container {
-    padding: 6px;
-    border-right: 3px solid #0B1215;
-  }
-  
-  .artist-block-artist-name {
-    font-size: 18px;
-    margin-bottom: 4px;
-  }
-  
-  .artist-block-product-name {
-    font-size: 12px;
-  }
-
-  .artist-block-price {
-    font-size: 30px;
-  }
-}
-
-/* Mobile Media Query */
-@media (max-width: 768px) {
-  .roster-section {
-    padding: 60px clamp(1px, 13vw, 45px);
-  }
-
-  .roster-heading {
-    font-size: 60px;
-    margin-bottom: clamp(1px, 9vw, 40px);
-    text-align: center;
-  }
-
-  .roster-grid {
-    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
-    gap: 9vw;
-    gap: clamp(1px, 9vw, 30px);
-    padding: 0 6vw;
-  }
-
-  .artist-block:hover .default-image {
-    opacity: 1;
-  }
-
-  .artist-block:hover .hover-image {
-    opacity: 0;
-  }
-
-  .artist-block .default-image {
-    opacity: 1;
-    transition: opacity 0.3s ease-in-out;
-  }
-
-  .artist-block .hover-image {
-      opacity: 0;
-      transition: opacity 0.3s ease-in-out;
-  }
-
-  .artist-block.scrolled .default-image {
-      opacity: 0;
-  }
-
-  .artist-block.scrolled .hover-image {
-      opacity: 1;
-  }
-
-  .artist-block-names-container {
-    padding: 4px;
-  }
-  
-  .artist-block-artist-name {
-    font-size: 18px;
-    margin-bottom: 4px;
-  }
-  
-  .artist-block-product-name {
-    font-size: 10px;
-  }
-
-  .artist-block-price {
-    font-size: 26px;
-  }
 }
